G1 - Missing memory barrier in start_cset_region_for_worker

XMLWordPrintable

    • gc
    • b105
    • Not verified

        The check, if the previous workers starting region is valid has to be ordered by a memory barrier to happen before accessing that memory region, as both values are changed by another thread.

              Assignee:
              Axel Siebenborn
              Reporter:
              Axel Siebenborn
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: