8147611: G1 - Missing memory barrier in start_cset_region_for_worker

Reviewed-by: mgerdin, tschatzl